PUB-2461: Fixing failing tests