@@ -45,6 +45,7 @@ tasks.withType(Test) {
 
 test {
   failFast = true
+  jvmArgs '-Djava.security.manager=allow'
 }
 
 checkstyle {
